# UnknownEngine

./: .gitignore  .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  Engine.cpp  EngineContext.h  EnginePrivate.h  Utils.cpp  Utils.h
engine/core/ecs/: Component.h  ComponentManagerPrivate.h  SystemManager.cpp
engine/core/renderer/: RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h
engine/core/renderer/shaders/: basic_fragment_shader.glsl  basic_vertex_shader.glsl
engine/core/window/: Window.h
engine/ecs/: CMakeLists.txt
engine/ecs/component/: ComponentManager.cpp  ComponentManagerPrivate.h
engine/ecs/component/default_components/: MeshComponent.cpp  MeshComponent.h
engine/ecs/entity/: Entity.h  EntityManager.cpp  EntityManager.h  EntityManagerPrivate.h
engine/ecs/system/: System.h  SystemManager.cpp  SystemManagerPrivate.h
engine/ecs/system/default_systems/input_system/: InputSystem.cpp  InputSystemPrivate.h
engine/graphics/: CMakeLists.txt
engine/graphics/renderer/: RenderSystem.cpp  RenderSystem.h  Shader.cpp
engine/graphics/renderer/shaders/: basic_vertex_shader.glsl
engine/graphics/window/: Window.cpp  Window.h
engine/input_system/: InputSystem.cpp  InputSystemPrivate.h
engine/resources/: CMakeLists.txt
engine/resources/mesh/: Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h
engine/systems/input_system/: InputSystem.cpp  InputSystemPrivate.h
engine/window/: Window.cpp  Window.h
games/: CMakeLists.txt  main.cpp
include/UnknownEngine/: ComponentManager.h  Engine.h  EntityManager.h  InputSystem.h  SystemManager.h
include/UnknownEngine/ecs/: Component.h  MeshComponent.h  TransformComponent.h
shaders/: fragmentshader.glsl  light_source_fs.glsl  light_source_vs.glsl  lighting_fs.glsl  lighting_vs.glsl  vertexshader.glsl
src/: camera.h  fragmentshader.glsl  main.cpp  mesh.h  model.h  shader.h  vertexshader.glsl
